Build a Fraction: Shapes: Fixed: Shapes put into container on level 3 have pieces drag when they shouldn't.
Build a Fraction: Shapes: Fixed: Target cell isn't flashing
Build a Fraction: Shapes: Fixed: Level refresh wasn't working
Build a Fraction: Shapes: Fixed z-ordering and card layout positions
Build a Fraction: Numbers: Move cards closer to the bottom of the stack instead of original location when stack is depleting
Build a Fraction: Numbers: Fix z-ordering when returning number cards to the toolbox so that stacks will look like they did at startup
Build a Fraction: Numbers: Only allow front card to be picked
Build a Fraction: On 2nd page of level selection screen, use 4 stars as max
Fraction Matcher: Changed stopwatch and timer components to pairs of radio buttons instead of toggle buttons
Build a Fraction: Augment level list for picture levels 6-10 (with copies of level 5)
Build a Fraction: When going back to level selection carousel, remember which page you were on.
Build a Fraction: Play sound for completing individual challenges when placed in the target box rather than when built
Equality lab: Water glasses are the wrong color in the bucket
Equality lab: Fixed icon colors to match the drawn representations
Equality Lab: added vertical bars
Build a Fraction: Added multiple pages to carousel for level selection
# 1.00.05 (65811) Jul 13, 2012
Build a Fraction: Play "ding" sound when a match complete instead of when placed in target box
# 1.00.04 (65804) Jul 13, 2012
Build a Fraction: Added audio on/off controls on the level selection screen
# 1.00.03 (65796) Jul 13, 2012
Build a Fraction: Play a "ding" sound when filling a box, or "ta-da" sound when all boxes full
Build a Fraction: When refreshing a level, cross fade instead of panning the camera
# 1.00.02 (65769) Jul 11, 2012
# 1.00.01 (65767) Jul 11, 2012
Fraction Matcher: Use a consistent color for red in the level selection screen, see #3357